    Closes: #620881, #656939.
  * Document the availability of other apt sources, thanks Karl for the
    patch. Closes: Bug#608828.
  * Update xorg, brltty and speakup versions.
  * WPA/WPA2 is now available. Closes: #659648.
  * Use dd of= instead of cat >, to save users who use sudo. Advise to make
    sure the stick is unmounted. Closes: #660776.

  [ Joey Hess ]
  * Fix typo in example preseed. Closes: #612631

  [ Didier Raboud ]
  * Document win32-loader as a possible boot method. Closes: #444017.

  [ Colin Watson ]
  * The text frontend is available on most default install media.  Adjust
    the Boot Parameters section to say so.
  * Update url-us-keymap.  Thanks, Manfred Hampl; LP: #741134.
  * Document log_host and log_port.
  * Update link to installer/doc/devel/ to cope with the switch to git.

  [ Christian Perrier ]
  * Document preseed-md5 and keymap preseed aliases
    Closes: #621825, #621824
  * Add VCS-Browser to debian/control. Closes: #636937

  [ Martin Michlmayr ]
  * Update list of supported ARM devices.

  [ Miguel Figueiredo ]
  * Fix chroot install keyboard configuration. Closes: #634168.

  [ Julian Andres Klode ]
  * Use C.UTF-8 locale for chroot install. Closes: #634167.

  [ Joey Hess ]
  * Remove dead link to Phoenix large disk BIOS faq. Closes: #638268
  * Add a pointer to the unofficial non-free CDs with firmware.

 -- Samuel Thibault <sthibault@debian.org>  Tue, 21 Feb 2012 20:47:50 +0100

installation-guide (20110122) unstable; urgency=low

  [ Frans Pop ]
  * List myself as one of the main authors in the administrativa appendix.
  * Clarify IP addresses in example for booting SS4000-E (arm). Thanks to
    Miroslav Kure for the patch.
  * Add link to boot screen section in accessibility section. Closes: #579954.

  [ Martin Michlmayr ]
  * Update links for ARM images.

  [ Samuel Thibault ]
  * Update brltty version.
  * Document booting from DOS (Closes: Bug#518808).
  * Add non-Linux infrastructure to the build system.