@@ -168,7 +168,7 @@ alguns missatges pot ser que es mostrin en angles.
 </varlistentry>
 <varlistentry>
 
-<term>kbd-chooser</term><listitem><para>
+<term>console-setup</term><listitem><para>
 
 Mostra una llista de teclats dels quals l'usuari tria el model que es
 correspon amb el seu.
