@@ -159,7 +159,7 @@ vybraném jazyce. Pokud není, některé texty se zobrazí anglicky.
 </varlistentry>
 <varlistentry>
 
-<term>kbd-chooser</term><listitem><para>
+<term>console-setup</term><listitem><para>
 
 Zobrazí seznam klávesnic, ze kterých si můžete vybrat nejvhodnější
 model odpovídající připojené klávesnici.
