@@ -170,7 +170,7 @@ einige Meldungen in Englisch angezeigt werden).
 </varlistentry>
 <varlistentry>
 
-<term>kbd-chooser (Tastatur-Auswahl)</term><listitem><para>
+<term>console-setup</term><listitem><para>
 
 Zeigt eine Liste von Tastaturmodellen, aus der der Benutzer das passende
 auswählt.
