@@ -164,7 +164,7 @@ in English.
 </varlistentry>
 <varlistentry>
 
-<term>kbd-chooser</term><listitem><para>
+<term>console-setup</term><listitem><para>
 
 Shows a list of keyboards, from which the user chooses the model which
 matches his own.
