@@ -131,7 +131,7 @@ Erabiltzaileari PCMCIA txartelak konfiguratzen uzten dio.
 </para></listitem>
 </varlistentry>
 <varlistentry>
-<term>kbd-chooser</term><listitem><para>
+<term>console-setup</term><listitem><para>
 Teklatuen zerrenda bat erakusten du, bertatik erabiltzaileak bere
 teklatuari hobekien egokitzen zaiona aukeratzen duelarik.
 </para></listitem>
