@@ -164,7 +164,7 @@ seront affichés en anglais.
 </varlistentry>
 <varlistentry>
 
-<term>kbd-chooser</term><listitem><para>
+<term>console-setup</term><listitem><para>
 
 Ce programme affiche une liste des cartes clavier. 
 
