@@ -324,7 +324,7 @@ alcuni messaggi potrebbero essere visualizzati in inglese.
 </varlistentry>
 <varlistentry>
 
-<term>kbd-chooser</term><listitem><para>
+<term>console-setup</term><listitem><para>
 
 <!--
 Shows a list of keyboards, from which the user chooses the model which
