@@ -166,7 +166,7 @@ in het Engels getoond.
 </varlistentry>
 <varlistentry>
 
-<term>kbd-chooser</term><listitem><para>
+<term>console-setup</term><listitem><para>
 
 De module 'kbd-chooser' (toetsenbordkiezer) toont een lijst van toetsenborden
 waaruit de gebruiker het model kan kiezen dat overeenkomt met zijn toetsenbord.
