@@ -174,7 +174,7 @@ esteja completa algumas mensagens podem ser exibidas em Inglês.
 </varlistentry>
 <varlistentry>
 
-<term>kbd-chooser</term><listitem><para>
+<term>console-setup</term><listitem><para>
 
 Mostra uma lista de teclados, no qual o usuário pode escolher o modelo que
 é exatamente igual ao que possui.
