@@ -24,6 +24,7 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   * WPA/WPA2 is now available. Closes: #659648.
   * Use dd of= instead of cat >, to save users who use sudo. Advise to make
     sure the stick is unmounted. Closes: #660776.
+  * Rename kbd-chooser component to console-setup.
 
   [ Joey Hess ]
   * Fix typo in example preseed. Closes: #612631
